--- a/index.html
+++ b/index.html
@@ -1106,7 +1106,7 @@
     </div>
     <div class="pcard">
       <span class="pcard-val">10%</span>
-      <span class="pcard-label">DEX Listing</span>
+      <span class="pcard-label">DEX Listing and CEX Listing</span>
       <p class="pcard-desc">Dedicated liquidity allocation for exchange listing</p>
     </div>
   </div>
